cli/tests/ui/binding_missing_from.stderr
Error: manifest::deserialize_error

  × check failed
  ╰─▶ json5 deserialize error at bindings[1]: binding is missing required
      field `from`
    ╭─[<CARGO_MANIFEST_DIR>/tests/ui/binding_missing_from.json5:20:5]
 19 │     { to: "#green.llm", from: "#green_router.llm" },
 20 │     { to: "#green.env" },
    ·     ──────────┬─────────
    ·               ╰── binding is missing required field `from`
 21 │   ],
    ╰────

